@@ -9,22 +9,21 @@
  * Neither the name of the mini2Dx nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package org.mini2Dx.tiled.collisions;
+package org.mini2Dx.tiled.collisions.merger;
 
 import org.mini2Dx.tiled.Tile;
+import org.mini2Dx.tiled.collisions.TiledCollisionMapper;
+import org.mini2Dx.tiled.collisions.TiledCollisionMerger;
 
 /**
- * A default implementation of {@link TiledCollisionMapper} that merges tiles if
+ * An implementation of {@link TiledCollisionMapper} that merges tiles if
  * they have the same tile ID
  */
-public class DefaultTiledCollisionMerger implements TiledCollisionMerger {
+public class TileIdCollisionMerger implements TiledCollisionMerger {
 
 	@Override
 	public boolean isMergable(Tile tile1, Tile tile2) {
-		if (tile1.getTileId() != tile2.getTileId()) {
-			return false;
-		}
-		return true;
+		return tile1.getTileId() == tile2.getTileId();
 	}
 
 }
